--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,15 @@
     -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2R1WXF61F"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209677629-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'G-Q2R1WXF61F');
+    gtag('config', 'UA-209677629-3');
   </script>
+
 
 
   <title>Simplest Chat App</title>
